# third_party

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmake  config.cmake  example.cpp  third_party-changes.patch  utils.cmake
abseil-src/: build.cmake
ade-src/: build.cmake
avalontoolkit-src/: build.cmake
avalontoolkit-src/avalontoolkit/StandardFiles/: checkfgs.aci
avalontoolkit/common/: denormal.c  layout.c
avalontoolkit/include/avalontoolkit/: patclean.h  set.h
avalontoolkit/src/: depictutil.c  didepict.c  geometry.c  set.c  ssmatch.c  symbol_lists.c  utilities.c
benchmark-src/: build.cmake
boost-src/: build.cmake
c/: CMakeLists.txt
c/freesasa-src/freesasa/: aclocal.m4  config.h.in
cairo-src/: build.cmake
cairo-src/cairo/boilerplate/: cairo-boilerplate.c
cairo-src/cairo/src/: cairo-compiler-private.h  cairo-ps-surface.c  cairo.h  cairoint.h
cmake/: XGDBuildBoost.cmake  XGDBuildLibpng.cmake  XGDBuildLibxml2.cmake  XGDBuildNCNN.cmake  XGDBuildOpenbabel.cmake  XGDExternalBuild.cmake  XGDExternalCheckEnv.cmake  XGDExternalFindPackage.cmake  XGDExternalFindRuntime.cmake  XGDExternalLink.cmake  XGDExternalUtil.cmake  api_deps_link.cmake  api_deps_util.cmake  api_link.cmake  api_util.cmake  build-abseil.cmake  build-arrow.cmake  build-better-enums.cmake  build-boost.cmake  build-cairo.cmake  build-cpufeatures.cmake  build-eigen.cmake  build-ggml.cmake  build-indigo.cmake  build-libxml2.cmake  build-lunasvg.cmake  build-ncnn.cmake  build-openbabel.cmake  build-opencv.cmake  build-openssl.cmake  build-plutovg.cmake  build-quickjs.cmake  build-rdkit.cmake  build-skia.cmake  build-yoga.cmake  build-zxing.cmake  cmake-utils.cmake  internal_build.cmake  internal_build_boost_util.cmake  internal_build_libxml2_util.cmake  (+12 more)
cmake/global_init_source/: openbabel.cpp  qt.cpp  spdlog.cpp
coordgen-src/: build.cmake
coordgen-src/coordgen/: CoordgenConfig.hpp
cpp/: CMakeLists.txt
cpp/avalontoolkit/SourceDistribution/: non_windows.makefile
cpp/freesasa/: configure
cpp/freesasa-src/freesasa/: Makefile.in
cpp/freesasa/doc/: Makefile.in
cpp/freesasa/share/: Makefile.in
cpp/freesasa/src/: Makefile.in
cpp/maeparser-src/maeparser/: MaeParserConfig.hpp
cpp/rdkit-src/rdkit/: .gitignore
cppcoro-src/cppcoro/lib/: auto_reset_event.cpp  file.cpp  file_read_operation.cpp  file_write_operation.cpp  io_service.cpp  read_only_file.cpp  read_write_file.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp  socket_disconnect_operation.cpp  socket_helpers.cpp  socket_helpers.hpp  socket_recv_from_operation.cpp  socket_recv_operation.cpp  socket_send_operation.cpp  socket_send_to_operation.cpp  spin_wait.cpp  static_thread_pool.cpp  writable_file.cpp  write_only_file.cpp
cpufeatures-src/: build.cmake
examples/: CMakeLists.txt  msvc_release.rc
examples/asio/: CMakeLists.txt
examples/bgl/: CMakeLists.txt
examples/cmake/: build-boost.cmake  build-cairo.cmake  build-cpufeatures.cmake  build-cutlass.cmake  build-indigo.cmake  build-libpng.cmake  build-libxml2.cmake  build-ncnn.cmake  build-nodeeditor.cmake  build-openbabel.cmake  build-opencv.cmake  build-openssl.cmake  build-pixman.cmake  build-protobuf.cmake  build-rdkit.cmake  build-zlib.cmake  cmake-utils.cmake  project-config.cmake
examples/geo/: CMakeLists.txt
examples/odeint/: CMakeLists.txt
examples/rapidjson/: CMakeLists.txt
examples/ublas/: CMakeLists.txt
fluentui-src/fluentui/src/: Def.h  FluApp.cpp  FluApp.h  FluColors.h  FluEventBus.cpp  FluEventBus.h  FluHttp.cpp  FluHttpInterceptor.h  FluQrCodeItem.cpp  FluRectangle.cpp  FluTableSortProxyModel.cpp  FluTextStyle.h  FluTheme.cpp  FluTools.cpp  FluTools.h  FluTreeModel.cpp  FluTreeModel.h  FluViewModel.cpp  FluViewModel.h  FluWatermark.cpp  FluentIconDef.cpp  FluentUI.cpp  MainThread.h  Screenshot.cpp
freesasa-src/: build.cmake
freesasa-src/freesasa/src/: xml.c
freetype-src/: build.cmake
ggml-src/: build.cmake
ggml-src/ggml/include/: ggml-cuda.h  ggml.h
ggml-src/ggml/src/: ggml-backend-impl.h  ggml-cuda.cu  ggml-impl.h  ggml.c
gtest-src/: build.cmake
inchi-src/: build.cmake
inchi/src/: runichi.c
inchi/src/ixa/: ixa_mol.c
include/coordgenlibs/: CoordgenConfig.hpp
indigo-src/: build.cmake
libpng-src/: build.cmake
libpng-src/libpng/: pngconf.h  pngpriv.h
libxml2-src/: build.cmake
libxml2-src/libxml2/: error.c
maeparser-src/: build.cmake
maeparser-src/maeparser/: MaeParserConfig.hpp
maeparser/include/maeparser/: MaeBlock.hpp
ncnn-src/: build.cmake
ncnn-src/ncnn/cmake/: ncnn_add_layer.cmake  ncnn_add_shader.cmake  ncnn_generate_shader_comp_header.cmake
ncnn-src/ncnn/src/: gpu.h  modelbin.cpp
ncnn/cmake/: ncnn_add_layer.cmake  ncnn_add_shader.cmake
nodeeditor-src/: build.cmake
openbabel-src/: build.cmake
openbabel-src/openbabel/data/: patty.rules
openbabel-src/openbabel/include/: RDKitConv.h
openbabel-src/openbabel/src/: chargemodel.cpp  config.h.cmake  (+9 more)
openbabel/src/: RDKitConv.cpp  atom.cpp  base.cpp  bitvec.cpp  canon.cpp  chains.cpp  conformersearch.cpp  confsearch.cpp  data.cpp  data_utilities.cpp  distgeom.cpp  forcefield.cpp  graphsym.cpp  isomorphism.cpp  mcdlutil.cpp  mol.cpp  obconversion.cpp  parsmart.cpp  patty.cpp  phmodel.cpp  plugin.cpp  ring.cpp  rotamer.cpp  rotor.cpp  spectrophore.cpp  tautomer.cpp  typer.cpp  zipstreamimpl.h
opencv-src/: build.cmake
openssl-src/: build.cmake
patches/: avalontoolkit.diff  benchmark.diff  boost.diff  coordgen.diff  eigen.diff  inchi.diff  maeparser.diff  ncnn.diff  openbabel.diff  rdkit.diff  ringdecomposerlib.diff  third_party-changes.patch  yaehmop.diff  zlib.diff
pixman-src/: build.cmake
protobuf-src/: build.cmake
rdkit-src/: build.cmake
ringdecomposerlib-src/: build.cmake
shadow_build/: CMakeLists.txt
spdlog-src/: build.cmake
src/inchi/: ichicomp.h  inchi_dll_a.h
src/zlib/: gzguts.h
tinyxml2-src/: build.cmake
tpbuild/: CMakeLists.txt
yaehmop-src/: build.cmake
yaehmop/src/: cboris.c  diag.c  lovlap.c
yoga-src/: build.cmake
zlib-src/: build.cmake
zlib-src/zlib/: gzguts.h  zconf.h
(+466 files in other folders)
